Changelog
=========

1.4.8 (Unreleased)
------------------

* Add Chinese translation.
  [jianaijun]

* Clear action now updates active steps (needed to cover dynamic wizards)
  [gotcha, schminitz]

* Fix step data initial load in case of dynamic wizards (ie when steps are
  depending on user data)
  [gotcha, schminitz]

* Enabling overriding button conditions in descendant classes
  [gotcha]

* In wizard.Wizard, the absolute_url property will throw a TypeError if 
  self.__name__ is None. Not any more! The problem now is this means that 
  absolute_url will inaccurate in that circumstance. TODO
  [spanky]

* Add French translation.
  [mpeeters]

1.4.7 (2012-01-05)
------------------

* Add ability to skip validation of current input if the user
  uses the Back button.  Default remains unchanged.
  [spanky]

* Add "id" as an attribute of the form tag
  [spanky]

1.4.6 (2011-10-19)
------------------

* Add Spanish translation.
  [davisagli]

1.4.5 (2011-10-19)
------------------

* Make sure wizard step labels are translated.
  [davisagli]

1.4.4 (2011-10-17)
------------------

* Avoid using any() to restore compatibility with Python 2.4.
  [davisagli]

1.4.3 (2011-07-13)
------------------

* Don't count browser views when determining if the user has left the
  wizard.
  [davisagli]

1.4.2 (2011-05-04)
------------------

* Fix AutoWizard widget traverser registration.
  [elro]

1.4.1 (2011-05-04)
------------------

* Add an AutoWizard for use with plone.autoform.
  [elro]

* Add a Clear button that clears the session and goes back to step 1.
  [elro]

* Reorder buttons so Finish and Continue both appear before Back.
  [elro]

1.4 (2011-05-04)
----------------

* Remove <hr />
  [elro]

* Use Products.statusmessages.
  [elro]

* Tweak wizard-buttons to conform to standard plone formControls.
  [elro]

* Remove div.row from wizard-step.pt.
  [elro]

1.3.3 (2011-03-22)
------------------

* Normalize @@ view prefix when comparing URLs.
  [davisagli]
