@@ -25,13 +25,20 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 import zope.component
 from zope.interface import implements
-from zope.app.pagetemplate import viewpagetemplatefile
 from z3c.form import button, field, form, interfaces, group
 from Products.statusmessages.interfaces import IStatusMessage
 
 from collective.z3cform.wizard import utils
 from collective.z3cform.wizard.interfaces import IWizard, IStep
 from collective.z3cform.wizard.i18n import MessageFactory as _
+
+
+try:
+    from zope.browserpage import viewpagetemplatefile
+except ImportError:
+    # Plone < 4.1
+    from zope.app.pagetemplate import viewpagetemplatefile
+
 
 WIZARD_SESSION_KEY = 'collective.z3cform.wizard'
 
@@ -356,4 +363,4 @@ class Wizard(utils.OverridableTemplate, form.Form):
 
     @property
     def absolute_url(self):
-        return self.context.absolute_url() + '/' + (self.__name__ or '') 
+        return self.context.absolute_url() + '/' + (self.__name__ or '')
